--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
           <p>
             <strong>Hi! and welcome to the page.</strong> I am Nithisha.I am currently pursuing my Masters in Computer Science at University of Central Florida . I am an Indian by nationality. I have close to four years work experience as a software engineer at Pegasystems prior to my Masters. Most of my work experinece include developing Microservices using Java ,NodeJS, Mongodb , GCP and AWS. I also love to muse with work related to writings or paitings. I like reading novels. Hard engineering problems are often intrisically fun to tackle, I'm most attracted to solving real customer problems with a business justification.  <br><br>
             <strong> My interests,</strong> however, extend beyond software industry . I love traveling and meeting new people.<br><br>
-            <i>Things I do</i> During my free time, I like to hang out with family or friends, or chill with either Netflix or Prime. Else i could look for possible opportunities where I can learn and can take collaborative team leadership responsibities, and gain experience with managing tech fields. 
+            <i>Things I do</i> During my free time, I like to hang out with family or friends. I also like to look for possible opportunities where I can learn and can take collaborative team leadership responsibities, and gain experience with managing tech fields. 
           </p>
         </section>
 
