--- a/index.html
+++ b/index.html
@@ -339,12 +339,24 @@
           </div>
 
           <ol class="timeline-list">
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Software Engineer Intern <p class="timeline-text">Oracle, Austin, USA</p></h4>
+
+              <span>May 2024 - August 2024</span>
+
+              <p class="timeline-text">
+                Enhanced Kubernetes Operator's codebase using GoLang and Operator-SDK to improve quality by 30%.
+                Researched and integrated unit and integration testing frameworks for the Operator using Ginkgo and Gomega, by incorporating monkey patching to mock interactions to cloud providers like openstack.
+              </p>
+
+            </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Cloud development engineer <p class="timeline-text">Pega Systems</p></h4>
+              <h4 class="h4 timeline-item-title">Cloud development engineer <p class="timeline-text">Pegasystems, India</p></h4>
 
-              <span>March 2022 - Jun 2023</span>
+              <span>March 2022 - June 2023</span>
 
               <p class="timeline-text">
                 Developed high-performance Micro-Services for App Registration using Java, Micronaut and MongoDB.
@@ -359,7 +371,7 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Systems Engineer <p class="timeline-text">Tata Consultamcy Services </p></h4>
+              <h4 class="h4 timeline-item-title">Systems Engineer <p class="timeline-text">Tata Consultamcy Services, India</p></h4>
 
               <span>June 2019 - March 2022</span>
 
@@ -534,6 +546,18 @@ Designed and implemented data loading pipelines using Streamsets to load data in
               </div>
 
             </li>
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">GoLang</h5>
+                <data value="80">80%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 80%;"></div>
+              </div>
+
+            </li>
 
             <li class="skills-item">
 
@@ -644,28 +668,10 @@ Designed and implemented data loading pipelines using Streamsets to load data in
           <h3 style="color: rgba(255, 217, 0, 0.781);" class="h3 clients-title">Tools and Technologies</h3>
 
           <ul class="clients-list has-scrollbar">
-
+            
             <li class="clients-item">
               <a href="#">
-                <img src="images/cloud.jpg" alt="client logo">
-              </a>
-            </li>
-
-            <li class="clients-item">
-              <a href="#">
-                <img src="images/AWS-logo.png" alt="client logo">
-              </a>
-            </li>
-
-            <li class="clients-item">
-              <a href="#">
-                <img src="images/Node-logo.png" alt="client logo">
-              </a>
-            </li>
-
-            <li class="clients-item">
-              <a href="#">
-                <img src="images/Mongodb-logo.png" alt="client logo">
+                <img src="images/Node-logo.png" alt="client logo" height="90">
               </a>
             </li>
 
@@ -674,9 +680,27 @@ Designed and implemented data loading pipelines using Streamsets to load data in
                 <img src="images/java-logo.png" alt="client logo" height="90">
               </a>
             </li>
-
+            <li class="clients-item">
+              <a href="#">
+                <img src="images/Go-Logo.png" alt="client logo" height="90">
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="#">
+                <img src="images/cloud.jpg" alt="client logo">
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="#">
+                <img src="images/AWS-logo.png" alt="client logo" height="90">
+              </a>
+            </li>
+            <li class="clients-item">
+              <a href="#">
+                <img src="images/Mongodb-logo.png" alt="client logo" height="90">
+              </a>
+            </li>
             
-
           </ul>
 
         </section>
