changes to timeline

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nithisha Reddy Gaddam</title>
-
+  
   <!--
     - favicon
   -->
@@ -302,25 +302,27 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">University of Central FLorida</h4>
-
-              <span>2023 — 2025</span>
-
-              <p class="timeline-text">
-                Masters in Computer Science
-              </p>
+              <div class="flex-container">
+                <span class="college-name">University of Central Florida</span>
+                <span class="year">2023-2025</span>
+            </div>
+            <div class="flex-container">
+                <span class="course-name">Masters in Computer Science</span>
+                <span class="gpa">GPA: 4.0</span>
+            </div>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">VNR Vignana Jyothi Institute of Engineering and technology</h4>
-
-              <span>2015 — 2019</span>
-
-              <p class="timeline-text">
-                Bachelors in ECE
-              </p>
+              <div class="flex-container">
+                <span class="college-name">VNR Vignana Jyothi College of Engineering and Technology</span>
+                <span class="year">2015-2019</span>
+            </div>
+            <div class="flex-container">
+                <span class="course-name">Bachelors in Electornics and Communication Engineering</span>
+                <span class="gpa">GPA: 9.31/10</span>
+            </div>
 
             </li>
 
@@ -341,46 +343,58 @@
           <ol class="timeline-list">
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Software Engineer Intern <p class="timeline-text">Oracle, Austin, USA</p></h4>
-
-              <span>May 2024 - August 2024</span>
+              <div class="flex-container">
+                <span class="college-name">Oracle</span>
+                <span class="year">Austin, Texas, USA</span>
+            </div>
+            <div class="flex-container">
+                <span class="course-name">Software Engineer Intern</span>
+                <span class="gpa">May 2024-August 2024</span>
+            </div>
 
               <p class="timeline-text">
-                Enhanced Kubernetes Operator's codebase using GoLang and Operator-SDK to improve quality by 30%.
-                Researched and integrated unit and integration testing frameworks for the Operator using Ginkgo and Gomega, by incorporating monkey patching to mock interactions to cloud providers like openstack.
-              </p>
+                * Enhanced Kubernetes Operator's codebase using GoLang and Operator-SDK to improve quality by 30%.</p>
+              <p class ="timeline-text"> * Researched and integrated unit and integration testing frameworks for the Operator using Ginkgo and Gomega, by incorporating monkey patching to mock interactions to cloud providers like openstack.</p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Cloud development engineer <p class="timeline-text">Pegasystems, India</p></h4>
-
-              <span>March 2022 - June 2023</span>
+              <div class="flex-container">
+                <span class="college-name">Pegasystems</span>
+                <span class="year">Hyderabad, India</span>
+            </div>
+            <div class="flex-container">
+                <span class="course-name">Cloud Development Engineer</span>
+                <span class="gpa">March 2022-July 2023</span>
+            </div>
 
               <p class="timeline-text">
-                Developed high-performance Micro-Services for App Registration using Java, Micronaut and MongoDB.
-                Enhanced code to maximize test coverage using JUnit and Karate for automated testing.
-                Refined the code to mitigate threats by using static code analysis tools like SonarQube .
-                Deployed REST APIs on AWS EC2 instances through CI/CD pipelines using Jenkins.
-                Developed a service to deploy CRDs onto AWS Kubernetes cluster using Go Lang and Make.
-                Contributed to Pega online community discussions to help customers in using the Pega products.
-              </p>
+                * Developed high-performance Micro-Services for App Registration using Java, Micronaut and MongoDB.</p>
+               <p class="timeline-text">* Enhanced code to maximize test coverage using JUnit and Karate for automated testing.</p>
+               <p class="timeline-text">* Refined the code to mitigate threats by using static code analysis tools like SonarQube .</p>
+               <p class = "timeline-text">* Deployed REST APIs on AWS EC2 instances through CI/CD pipelines using Jenkins.</p>
+               <p class = "timeline-text">* Developed a service to deploy CRDs onto AWS Kubernetes cluster using Go Lang and Make.</p>
+               <p class = "timeline-text">* Contributed to Pega online community discussions to help customers in using the Pega products.</p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Systems Engineer <p class="timeline-text">Tata Consultamcy Services, India</p></h4>
+              <div class="flex-container">
+                <span class="college-name">Tata Consultancy Services</span>
+                <span class="year">Hyderabad, India</span>
+            </div>
+            <div class="flex-container">
+                <span class="course-name">Software Engineer</span>
+                <span class="gpa">June 2019-March 2022</span>
+            </div>
 
-              <span>June 2019 - March 2022</span>
-
-              <p class="timeline-text">
-                Developed REST APIs using NodeJS to retrieve real time data from MongoDB and deploy them on GCP through CI/CD pipelines using Azure DevOps.
-Enhanced code to maximize test coverage using Mocha and Chai for automated testing.
-Improved API performance by reducing response time by 60% by implementing Circuit Breaker.
-Automated the process to load data from raw text files into MongoDB collections using NodeJS.
-Designed and implemented data loading pipelines using Streamsets to load data into MongoDB.	
+              <p class="timeline-text">* Developed REST APIs using NodeJS to retrieve real time data from MongoDB and deploy them on GCP through CI/CD pipelines using Azure DevOps.</p>
+              <p class="timeline-text">* Enhanced code to maximize test coverage using Mocha and Chai for automated testing.</p>
+              <p class="timeline-text">* Improved API performance by reducing response time by 60% by implementing Circuit Breaker.</p>
+              <p class="timeline-text">* Automated the process to load data from raw text files into MongoDB collections using NodeJS.</p>
+              <p class="timeline-text">* Designed and implemented data loading pipelines using Streamsets to load data into MongoDB.</p>
               </p>
 
             </li>
