--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
           - service
         -->
 
-        <section class="service">
+        <!--section class="service">
 
           <h3 style="color: rgba(255, 217, 0, 0.781);" class="h3 service-title">What i'm doing</h3>
 
@@ -282,7 +282,7 @@
 
           </ul>
 
-        </section>
+        </section-->
 
 
         <!--
